// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accent button example 1`] = `
"<b-button color=\\"accent\\">
    <button>
        <slot>Accent button</slot>
    </button>
</b-button>"
`;

exports[`Primary button example 1`] = `
"<b-button color=\\"primary\\">
    <button>
        <slot>Default button</slot>
    </button>
</b-button>"
`;
